--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,7 +18,8 @@
                     <Setter Property="BorderBrush" Value="Blue" />
                 </Trigger>
             </Style.Triggers>
-        </Style>
+        </Style>
+
         <DataTemplate DataType="{x:Type viewmodels:FileInfoViewModel}">
             <StackPanel Orientation="Horizontal">
                 <Image Width="16" Source="{Binding ImageSource}" />
@@ -47,8 +48,8 @@
 
         <Menu Grid.Row="0" Grid.ColumnSpan="2" DockPanel.Dock="Top">
             <MenuItem Header="{Binding Source={StaticResource Strings}, Path=File}">
-                <MenuItem Header="Open" Click="OnOpenItemMenuClick"></MenuItem>
-                <MenuItem Header="Exit" Click="OnExitItemMenuClick"></MenuItem>
+                <MenuItem Header="{Binding Source={StaticResource Strings}, Path=Open_Directory}" Click="OnOpenItemMenuClick"></MenuItem>
+                <MenuItem Header="{Binding Source={StaticResource Strings}, Path=Exit}" Click="OnExitItemMenuClick"></MenuItem>
             </MenuItem>
         </Menu>
         <ToolBarPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 0 0 0" Grid.Column="1" Background="{x:Static SystemColors.ControlLightBrush}" >
